# fast-sigma-matcher

./: .gitignore  sigma-engine-commands.txt
SigmaMatcherFast/: Program.cs  SigmaEngine.cs  SigmaEngineFast.cs  SigmaMatcherFast.csproj  SigmaMatcherFast.sln  SigmaNative.cs
SigmaMatcherFast/Properties/: AssemblyInfo.cs
rules/: 3.yml  8.yml  EncodedCommand.yml  LSASS.yml  Office.yml  RunOnce.yml  SysmonNetworkConnect.yml  Temp.yml  WMI.yml  rundll32.yml
rules/logs/: rule01_powershell_encoded.jsonl  rule02_procdump_lsass.jsonl  rule03_schtasks_create.jsonl  rule04_rundll32_handler.jsonl  rule05_office_spawns_shell.jsonl  rule06_exec_from_temp_appdata.jsonl  rule07_registry_run_persistence.jsonl  rule08_net_user_admin_add.jsonl  rule09_wmic_process_call_create.jsonl  rule10_sysmon_network_powershell_cmd.jsonl
rules/logs2/: rule01_powershell_encoded.json  rule02_procdump_lsass.json  rule03_schtasks_create.json  rule04_rundll32_handler.json  rule05_office_spawns_shell.json  rule06_exec_from_temp_appdata.json  rule07_registry_run_persistence.json  rule08_net_user_admin_add.json  rule09_wmic_process_call_create.json  rule10_sysmon_network_powershell_cmd.json
sigma-engine-ffi/: Cargo.toml
sigma-engine-ffi/src/: lib.rs  main.rs
